<resources>
    <string name="app_name">Cignifi</string>
    <string name="txt_login_to_your_account">Login to your account</string>
    <string name="txt_welcome">Welcome, </string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_out">Sign out</string>
    <string name="txt_or_sign_in_with">- Or sign in with -</string>
    <string name="txt_no_account">Don\'t have an account? <b>Sign Up</b> </string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="cd_cignifi_logo">cignifi-logo</string>
    <string name="cd_google_logo">google-logo</string>
    <string name="cd_facebook_logo">facebook-logo</string>
    <string name="cd_twitter_logo">twitter-logo</string>
    <string name="cd_apple_logo">apple-logo</string>
    <string name="welcome_msg"><sup>Welcome, %1$s!</sup></string>

    <!-- GOOGLE -->
    <string name="web_client_id">7*******************************************b.apps.googleusercontent.com</string>

    <!-- APPLE -->
    <string name="apple_key_id">A********L</string>
</resources>